<resources>
    <string name="app_name">MediaCallz</string>
    <string name="mandatory_update_title">Mandatory Update</string>
    <string name="mandatory_update_content">Uh oh! You must update the app to keep using it!</string>
    <string name="oops_try_again">Oops! please try again</string>
    <string name="disconnected">Huh? No internet?</string>
    <string name="invite">You are Invited to MediaCallz https://play.google.com/store/apps/details?id=com_international.mediacallz.app</string>
    <string name="block">Block</string>
    <string name="tutorial_text">Instructional</string>
    <string name="tutorial_text1">videos</string>
    <string name="tutorial_caller">Caller media</string>
    <string name="tutorial_profile">Profile media</string>
    <string name="under_construction">Under Construction</string>
    <string name="choose_contact_to_change_ring">Choose contact whom ring you want to change</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failure">Oops! Registration failed. Please Try again.</string>
    <string name="wrong_credentials">Oops! Incorrect SMS code.\n Insert correct code and try again.</string>
    <string name="initializing">Initializing…</string>
    <string name="please_wait">Please wait…</string>
    <string name="registering">Registering…</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="connected">Connected</string>
    <string name="sms_code_failed">Oops! Getting SMS code failed. Please try again…</string>
    <string name="get_sms_wait_text">The code should arrive in %1$d seconds…</string>
    <string name="get_sms_not_arrived">Code did not arrive? Try again!</string>
    <string name="get_sms_time_till_retry">You may retry in %1$d seconds…</string>
    <string name="get_sms_you_may_retry">You may now retry</string>
    <string name="get_sms_code">Click to receive SMS code</string>
    <string name="login">Click to login</string>
    <string name="sign_in">Sign-in</string>
    <string name="sms_code_hint"> SMS code</string>
    <string name="your_phone"> Your phone number</string>
    <string name="terms_and_conditions_title">Terms of Service and Privacy Policy</string>
    <string name="login_terms_title">Terms of Service</string>
    <string name="login_terms">Press continue to agree to MediaCallz terms of service or press cancel to terminate</string>
    <string name="login_terms_button">Continue</string>
    <string name="login_terms_press">Press </string>
    <string name="login_terms_press_continue"> to view the full terms.</string>
    <string name="login_read_more"><b><u>read more</u></b></string>
    <string name="permission_a_must"> Without these permissions the app is unable to work properly, please enable all permissions</string>
    <string name="permission_denied"> Permission denied</string>
    <string name="notification_title">MC</string>
    <string name="notification_text">Enabled</string>
    <string name="notification_ticker_text">MC Enabled</string>
    <string name="upload_ticker">File upload in progress</string>
    <string name="content_title">File upload</string>
    <string name="cant_send_to_self">Oops! Cannot choose media for yourself!</string>
    <string name="file_invalid">Oops! Invalid file or path</string>
    <string name="file_over_max_size">Oops! Select file smaller than: %1$s</string>
    <string name="destnumber_invalid">Oops! Invalid number</string>
    <string name="destination_download_complete">Media for %1$s is ready!</string>
    <string name="destination_download_failed">Oops! %1$s did not receive your media.</string>
    <string name="destination_media_cleared">Media for %1$s was cleared!</string>
    <string name="user_is_registered">User %1$s is registered</string>
    <string name="user_is_unregistered">User %1$s is unregistered</string>
    <string name="fetching_user_data">Fetching user data…</string>
    <string name="fetch_registered_contacts_failure">Failed to fetch contacts data!</string>
    <string name="fetching_registered_contacts">Fetching contacts data...</string>
    <string name="compression_took_too_long">Oops! compression took too long</string>
    <string name="upload_took_too_long">Oops! Upload took too long</string>
    <string name="compressing_file">Compressing file…</string>
    <string name="compressing_file2">Optimizing resolution…</string>
    <string name="trimming">Trimming to 60 seconds. Please wait…</string>
    <string name="processing_image">Processing image…</string>
    <string name="upload_success">Media on the way!</string>
    <string name="default_media_upload_success">Default media set successfully!</string>
    <string name="uploading">Uploading…</string>
    <string name="sent_invitation">Invitation Sent To: </string>
    <string name="share_subject">MediaCallz (Open it in Google Play Store to Download the Application)</string>
    <string name="share_via">Share via</string>
    <string name="delete_account_failed">Failed to delete account! Please contact MediaCallz support</string>
    <string name="deleting_account_msg">Deleting account…</string>
    <string name="action_cancelled">Action cancelled</string>
    <string name="invite_dialog_title">%1$s Unregistered</string>
    <string name="invite_dialog_summary"> Invite him now to get MediaCallz, and surprise him with video ringtones and more</string>
    <string name="invite_btn">Invite</string>
    <string name="clear_dialog_title">Return to normal ringing (without media)</string>
    <string name="clear_dialog_summary"> This will remove MC media from that user, so you will call without media</string>
    <string name="clear_btn">Remove</string>
    <string name="sending_to_contact">Sending Destination</string>
    <string name="waiting_for_transfer_sucess_dialog_msg"> Will be ready in about %1$d seconds\n if destination device is available.\n If not, you will be notified once it is ready</string>
    <string name="sending_clear_contact"> Clearing Destination Media</string>
    <string name="waiting_for_clear_transfer_success_dialog_msg"> Clearing it in about %1$d seconds\n if destination device is available.\n If not, you will be notified once it is cleared</string>
    <string name="finished_waiting_msg"> Destination device is not available right now\n You will be notified when action is finished</string>
    <string name="dont_show_again"> Do not show again</string>
    <string name="just_notify"> Just notify me</string>
    <string name="clearing"> Clearing...</string>
    <string name="clearing_failed">Oops! Clearing failed. Please Try again.</string>
    <string name="set_window"> Set your MC window</string>
    <string name="skip"> Skip</string>
    <string name="next_tip"> Next Tip</string>
    <string name="did_you_know"> Did you know ?!</string>
    <string name="tip1_windowresize"> you can move and resize the window with your fingers. it will always save the window size and location for next time. </string>
    <string name="tip2_profile"> after choosing contact, press on the smiley and choose media that will be played on contact device when he calls. </string>
    <string name="tip3_block"> you can block contact media through menu->who can mc me.\n or when it shows, there is a red block button that blocks also. </string>
    <string name="tip4_image_audio_gif"> you can add audio +image together and Separately, image can be also GIF. </string>
    <string name="tip5_you_can_preview"> you can preview media you already sent. just choose contact, press on the media -> preview. </string>
    <string name="tip6_ask_before_show"> in settings you can set that during the ring, you will be prompted whether to display the media that was sent </string>
    <string name="recording">Recording…</string>
    <string name="stop_recording">Stop recording</string>
    <string name="back">Back</string>
    <string name="media_type">Media Type</string>
    <string name="record_video">Record Video</string>
    <string name="audio">Audio</string>
    <string name="contact_name_or_number">Contact Name or Number</string>
    <string name="video_image">Video/Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="record_audio">Record Audio</string>
    <string name="mediacallz_gallery">MC Gallery</string>
    <string name="select_caller_media_title">Outgoing call media</string>
    <string name="select_profile_media_title">Incoming call media</string>
    <string name="record_audio_title">Record audio is ready</string>
    <string name="record_audio_desc">   Start Recording ?</string>
    <string name="start">Start</string>
    <string name="are_u_sure_title">Ready For Upload</string>
    <string name="are_u_sure_desc">   Are you sure you want to upload ?</string>
    <string name="upload">Upload</string>
    <string name="audio_history">Audio history</string>
    <string name="device_audio">Audio files from device</string>
    <string name="choose_audio_file">Choose Audio File</string>
    <string name="fileType_video">Video</string>
    <string name="fileType_image">Image</string>
    <string name="fileType_audio">Audio</string>
    <string name="ready_for_upload">Ready For Upload ?</string>
    <string name="play_preview">PLAY PREVIEW</string>
    <string name="stop_preview">STOP PREVIEW</string>
    <string name="rotate_image">Rotate Image</string>
    <string name="media_management">Media Management</string>
    <string name="all_can_mc_me">All can MC me</string>
    <string name="contacts_only">Contacts only</string>
    <string name="no_one">No one</string>
    <string name="block_specific_contact">Block specific contacts…</string>
    <string name="black_list">BLACK LIST:</string>
    <string name="select_all">Select ALL</string>
    <string name="unselect_all">UnSelect ALL</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="cancel">Cancel</string>
    <string name="help_title">Help</string>
    <string name="help_how_to_mc">How to mc ?</string>
    <string name="help_how_to_mc_summary">Return to step by step tutorial</string>
    <string name="website_help">Offical website help</string>
    <string name="website_help_summary">Go to the help , FAQ and videos</string>
    <string name="share_rate_title">Share and rate</string>
    <string name="share_title">Share us !</string>
    <string name="rate_title">Rate us !</string>
    <string name="contact_us_title">Contact us</string>
    <string name="mail_us">Mail us</string>
    <string name="mail_us_summary">mediacallzapp@gmail.com</string>
    <string name="facebook_message">Message us on facebook</string>
    <string name="about">About</string>
    <string name="version_title">Version</string>
    <string name="wifi_title">Wifi auto-download</string>
    <string name="wifi_summary">Download media ONLY on wifi</string>
    <string name="save_media_title">Save MC media</string>
    <string name="save_media_sumary">All MC media will be save in history folder and will be shown in gallery</string>
    <string name="advancd_settings">Advanced settings</string>
    <string name="enable_adv_settings">Enable advanced settings</string>
    <string name="enable_adv_settings_summary">In case you have bugs in receiving MC calls</string>
    <string name="foreground_settings_title">Enable forground MC service</string>
    <string name="foreground_settings_summary">In case you are missing MC calls ,enable this. may use more battery and (need app restart)</string>
    <string name="ringing_override_settings_title">for ringing issues(usually LG devices)</string>
    <string name="ringing_override_settings_summary">In case you receive Silent MC calls or something else, this may fix your bug</string>
    <string name="delete_account_summary">Delete account and all data</string>
</resources>