<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="right"
        android:inputType="text"
        android:orientation="vertical" >

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_can_mc_me"
        android:button="@null"
        android:drawableRight="@android:drawable/btn_radio"
        android:background="@drawable/custome_divider"
        android:id="@+id/all_valid"
        android:clickable="true" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts_only"
        android:button="@null"
        android:drawableRight="@android:drawable/btn_radio"
        android:background="@drawable/custome_divider"
        android:id="@+id/contacts_only"
        android:clickable="true" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_one"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:background="@drawable/custome_divider"
            android:id="@+id/no_one"
            android:clickable="true" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_specific_contact"
        android:button="@null"
        android:drawableRight="@android:drawable/btn_radio"
        android:background="@drawable/custome_divider"
        android:id="@+id/blacklist_specific"
        android:clickable="true" />
    </RadioGroup>

    <TextView
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/black_list"
        android:id="@+id/blacklist_title"
        android:textStyle="bold|normal|italic"
        android:gravity="center"
        android:textColor="#da1313"
        android:background="#eedcdc" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="10.0sp"
        android:id="@+id/blv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/blacklist_title"
        android:clickable="false"
        />



</LinearLayout>