<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

   <ListView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:dividerHeight="10.0sp"
       android:id="@+id/lv"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentRight="true"
       android:layout_alignParentEnd="true"
       android:layout_above="@+id/selectall"
       android:clickable="false"
       />

     <Button
         android:id="@+id/selectall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select_all"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/unselect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unselect_all"
        android:layout_alignTop="@+id/selectall"
        android:layout_toLeftOf="@+id/selectall"
        android:layout_toStartOf="@+id/selectall" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignTop="@+id/unselect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

