<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:background="#004559"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/getSmsCode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_sms_code"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/SMSCodeEditText"
        android:layout_marginBottom="35dp" />
        

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/SMSCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/login_btn"
        android:ems="10"
        android:hint="@string/sms_code_hint"
        android:maxLength="4"
        android:inputType="number"
        android:singleLine="true"
        android:background="#c4ffffff"
        android:layout_alignLeft="@+id/LoginNumber"
        android:layout_alignRight="@+id/LoginNumber"
        android:layout_marginBottom="35dp" />

    <EditText
        android:id="@+id/LoginNumber"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/getSmsCode_btn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:maxLength="10"
        android:hint="@string/your_phone"
        android:inputType="number"
        android:phoneNumber="true"
        android:singleLine="true"
        android:background="#c4ffffff"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/initTextView"
        android:layout_marginBottom="83dp"
        android:layout_above="@+id/LoginNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/initProgressBar"
        android:layout_above="@+id/initTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
