<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#004559">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_star_big_on"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/tip_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/image"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:text="Tips"
        android:textSize="20dp" />/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dont_show_tips"
        android:id="@+id/dont_show_tips"
        android:layout_below="@+id/tip_msg"
        android:layout_alignEnd="@+id/tip_msg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/next_tip"
        android:textColor="#ffffff"
        android:buttonTint="#ffffff" />

    <Button
        android:id="@+id/skip"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/tip_msg"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:background="#026683" />

    <Button
        android:id="@+id/next_tip"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/next_tip"
        android:background="#ff8400"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/skip"
        android:layout_alignBottom="@+id/skip"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/did_you_know"
        android:id="@+id/tip_title"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/tip_msg"
        android:textSize="30dp"
        android:layout_toRightOf="@+id/image"
        android:layout_alignEnd="@+id/tip_msg"
        android:layout_toLeftOf="@+id/image"
        android:layout_alignBottom="@+id/image"
        android:textColor="#ffffff" />

</RelativeLayout>